--- a/index.html
+++ b/index.html
@@ -1,44 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
 <title>Online Bidding System</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 </head>
+<body class="home">
 
-<body>
-
-<header>
+<div class="home-card">
     <h1>Online Bidding System</h1>
-    <div class="top-actions">
-        <button onclick="showUser()">User Panel</button>
-        <button onclick="showAdminLogin()">Admin Panel</button>
+    <p class="tagline">Smart • Secure • Transparent</p>
+
+    <div class="home-buttons">
+        <button onclick="location.href='user.html'">User Login</button>
+        <button onclick="location.href='admin.html'">Admin Login</button>
     </div>
-</header>
 
-<!-- USER PANEL -->
-<section id="userPanel" class="auction-container"></section>
+    <div class="pulse"></div>
+</div>
 
-<!-- ADMIN LOGIN -->
-<section id="adminLogin" class="admin hidden">
-    <h2>Admin Login</h2>
-    <input id="adminUser" placeholder="Username">
-    <input id="adminPass" type="password" placeholder="Password">
-    <button onclick="adminLogin()">Login</button>
-    <p id="loginError"></p>
-</section>
-
-<!-- ADMIN PANEL -->
-<section id="adminPanel" class="admin hidden">
-    <h2>Admin Dashboard</h2>
-    <div id="adminData"></div>
-</section>
-
-<canvas id="confetti"></canvas>
-
-<script src="script.js"></script>
 </body>
 </html>
