--- a/user-login.html
+++ b/user-login.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Admin Login</title>
+  <title>User Login</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="login-bg">
 
-<div class="login-box admin-box">
-  <h2>Admin Login</h2>
-  <input id="user" type="text" placeholder="Username">
+<div class="login-box">
+  <h2>User Login</h2>
+  <input id="email" type="email" placeholder="Email">
   <input id="pass" type="password" placeholder="Password">
-  <button onclick="adminLogin()">Login</button>
+  <button onclick="userLogin()">Login</button>
   <p id="error"></p>
 </div>
 
