--- a/admin.html
+++ b/admin.html
@@ -6,11 +6,13 @@
 </head>
 <body class="login-bg">
 
-<div class="login-box admin-box">
+<div class="login-box">
   <h2>Admin Login</h2>
-  <input id="user" type="text" placeholder="Username">
-  <input id="pass" type="password" placeholder="Password">
+
+  <input type="text" id="user" placeholder="Username">
+  <input type="password" id="pass" placeholder="Password">
   <button onclick="adminLogin()">Login</button>
+
   <p id="error"></p>
 </div>
 
