--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Online Bidding System</title>
+  <title>Login Portal</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1 class="title">Online Bidding System</h1>
+<h1 class="title">Welcome</h1>
 
 <div class="login-container">
   <div class="card user" onclick="location.href='user-login.html'">
     <h2>User Login</h2>
   </div>
 
-  <div class="card admin" onclick="location.href='admin.html'">
+  <div class="card admin" onclick="location.href='admin-login.html'">
     <h2>Admin Login</h2>
   </div>
 </div>
