--- a/user-login.html
+++ b/user-login.html
@@ -8,9 +8,13 @@
 
 <div class="login-box">
   <h2>User Login</h2>
-  <input id="email" type="email" placeholder="Email">
-  <input id="pass" type="password" placeholder="Password">
-  <button onclick="userLogin()">Login</button>
+
+  <input type="email" id="email" placeholder="Enter Email">
+  <button onclick="generateOTP()">Generate OTP</button>
+
+  <input type="text" id="otp" placeholder="Enter OTP">
+  <button onclick="verifyOTP()">Verify & Login</button>
+
   <p id="error"></p>
 </div>
 
