--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Login Portal</title>
+  <title>Online Bidding System</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="home">
 
-<h1 class="title">Welcome</h1>
+  <h1 class="title">Online Bidding System</h1>
 
-<div class="login-container">
-  <div class="card user" onclick="location.href='user-login.html'">
-    <h2>User Login</h2>
+  <div class="login-container">
+    <div class="card user" onclick="location.href='user-login.html'">
+      <h2>User Login</h2>
+    </div>
+
+    <div class="card admin" onclick="location.href='admin.html'">
+      <h2>Admin Login</h2>
+    </div>
   </div>
-
-  <div class="card admin" onclick="location.href='admin-login.html'">
-    <h2>Admin Login</h2>
-  </div>
-</div>
-
+<script src="script.js"></script>
 </body>
 </html>
