--- a/user-login.html
+++ b/user-login.html
@@ -8,16 +8,25 @@
 
 <div class="login-box">
   <h2>User Login</h2>
-
-  <input type="email" id="email" placeholder="Enter Email">
-  <button onclick="generateOTP()">Generate OTP</button>
-
-  <input type="text" id="otp" placeholder="Enter OTP">
-  <button onclick="verifyOTP()">Verify & Login</button>
-
+  <input type="email" id="email" placeholder="Email">
+  <input type="password" id="pass" placeholder="Password">
+  <button onclick="userLogin()">Login</button>
   <p id="error"></p>
 </div>
 
+<script>
+function userLogin(){
+  const email = document.getElementById("email").value;
+  if(email){
+    let users = JSON.parse(localStorage.getItem("users") || "[]");
+    users.push(email);
+    localStorage.setItem("users", JSON.stringify(users));
+    window.location.href = "user-dashboard.html";
+  } else {
+    document.getElementById("error").innerText = "Enter valid email";
+  }
+}
+</script>
 <script src="script.js"></script>
 </body>
 </html>
