--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Online Bidding System</title>
-  <link rel="stylesheet" href="style.css">
+<title>Online Bidding System</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body class="home">
 
-  <h1 class="title">Online Bidding System</h1>
+<div class="home-card">
+    <h1>Online Bidding System</h1>
+    <p class="tagline">Smart • Secure • Transparent</p>
 
-  <div class="login-container">
-    <div class="card user" onclick="location.href='user-login.html'">
-      <h2>User Login</h2>
+    <div class="home-buttons">
+        <button onclick="location.href='user.html'">User Login</button>
+        <button onclick="location.href='admin.html'">Admin Login</button>
     </div>
 
-    <div class="card admin" onclick="location.href='admin.html'">
-      <h2>Admin Login</h2>
-    </div>
-  </div>
-<script src="script.js"></script>
+    <div class="pulse"></div>
+</div>
+
 </body>
 </html>
