--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Online Bidding System</title>
+<meta charset="UTF-8">
+<title>Login | Online Bidding</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 </head>
-<body class="home">
 
-<div class="home-card">
+<body>
+<header>
     <h1>Online Bidding System</h1>
-    <p class="tagline">Smart • Secure • Transparent</p>
+</header>
 
-    <div class="home-buttons">
-        <button onclick="location.href='user.html'">User Login</button>
-        <button onclick="location.href='admin.html'">Admin Login</button>
-    </div>
+<section class="admin">
+    <h2>Login</h2>
+    <input id="username" placeholder="Username">
+    <input id="password" type="password" placeholder="Password">
+    <button onclick="login()">Login</button>
+    <p id="loginError"></p>
+</section>
 
-    <div class="pulse"></div>
-</div>
-
+<script src="script.js"></script>
 </body>
 </html>
