--- a/admin.html
+++ b/admin.html
@@ -1,93 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Admin Login | Online Bidding System</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #1e3c72, #2a5298);
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: white;
-    }
-
-    .login-box {
-      background: rgba(255,255,255,0.1);
-      padding: 30px;
-      border-radius: 12px;
-      width: 320px;
-      animation: fadeIn 1s ease-in-out;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
-    }
-
-    h2 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    input {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      border-radius: 6px;
-      border: none;
-      outline: none;
-    }
-
-    button {
-      width: 100%;
-      padding: 10px;
-      background: #00ffcc;
-      border: none;
-      border-radius: 6px;
-      font-weight: bold;
-      cursor: pointer;
-      transition: transform 0.3s, background 0.3s;
-    }
-
-    button:hover {
-      transform: scale(1.05);
-      background: #00ddb0;
-    }
-
-    .error {
-      color: #ffb3b3;
-      text-align: center;
-      margin-top: 10px;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(30px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Admin Dashboard</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+<header>
+    <h1>Admin Dashboard</h1>
+</header>
 
-  <div class="login-box">
-    <h2>Admin Login</h2>
-    <input type="text" id="username" placeholder="Admin Username">
-    <input type="password" id="password" placeholder="Admin Password">
-    <button onclick="login()">Login</button>
-    <div class="error" id="error"></div>
-  </div>
+<section class="admin">
+    <h3>Total Users: <span id="totalUsers">0</span></h3>
+    <div id="adminData"></div>
+</section>
 
-  <script>
-    function login() {
-      const user = document.getElementById("username").value;
-      const pass = document.getElementById("password").value;
-
-      if (user === "preesuzz" && pass === "50sodaa") {
-        localStorage.setItem("adminLoggedIn", "true");
-        window.location.href = "admin-dashboard.html";
-      } else {
-        document.getElementById("error").innerText = "Invalid admin credentials!";
-      }
-    }
-  </script>
-
+<script src="script.js"></script>
 </body>
 </html>
