--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
 
 <section class="admin">
     <h2>Login</h2>
-    <input id="username" placeholder="Username">
-    <input id="password" type="password" placeholder="Password">
-    <button onclick="login()">Login</button>
-    <p id="loginError"></p>
+
+    <div style="max-width:320px;margin:auto;">
+        <input id="username" placeholder="Username">
+        <input id="password" type="password" placeholder="Password">
+        <button onclick="login()">Login</button>
+        <p id="loginError"></p>
+    </div>
 </section>
 
 <script src="script.js"></script>
