--- a/admin.html
+++ b/admin.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>Admin Dashboard</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="style.css">
+  <title>Admin Panel</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-<header>
-    <h1>Admin Dashboard</h1>
-</header>
 
-<section class="admin">
-    <h3>Total Users: <span id="totalUsers">0</span></h3>
-    <div id="adminData"></div>
-</section>
+<h1>Admin Panel</h1>
+<div id="adminData"></div>
 
 <script src="script.js"></script>
 </body>
