--- a/user.html
+++ b/user.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>User Panel</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="style.css">
+  <title>User Auction Panel</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-<header>
-    <h1>User Auction Panel</h1>
-</header>
 
-<section id="userPanel" class="auction-container"></section>
-<canvas id="confetti"></canvas>
+<h1>User Auction Panel</h1>
+<div id="userPanel"></div>
 
 <script src="script.js"></script>
 </body>
