--- a/admin.html
+++ b/admin.html
@@ -7,6 +7,7 @@
 <body>
 
 <h1>Admin Panel</h1>
+<p><strong>Total Users:</strong> <span id="userCount"></span></p>
 <div id="adminData"></div>
 
 <script src="script.js"></script>
