--- a/user.html
+++ b/user.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>User Auction Panel</title>
+  <title>User Panel</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <h1>User Auction Panel</h1>
-<div id="userPanel"></div>
+<div id="userPanel" class="grid"></div>
 
 <script src="script.js"></script>
 </body>
