--- a/admin.html
+++ b/admin.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 
-<h1>Admin Panel</h1>
-<p><strong>Total Users:</strong> <span id="userCount"></span></p>
+<h1>Admin Dashboard</h1>
+<p><b>Total Users:</b> <span id="userCount"></span></p>
 <div id="adminData"></div>
 
 <script src="script.js"></script>
