--- a/user.html
+++ b/user.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1>User Auction Panel</h1>
+<h1>User Bidding Panel</h1>
 <div id="userPanel" class="grid"></div>
 
 <script src="script.js"></script>
