--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Auction Login</title>
+  <title>Login</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="center">
