--- a/admin.html
+++ b/admin.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 
-<h1>Admin Dashboard</h1>
-<p><b>Total Users:</b> <span id="userCount"></span></p>
-<div id="adminData"></div>
+<h1>Admin Panel</h1>
+<p><b>Total Users:</b> <span id="userCount">0</span></p>
+
+<div id="adminData" class="grid"></div>
 
 <script src="script.js"></script>
 </body>
