--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Login</title>
+  <title>Smart City Bidding - Login</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="center">
 
-<div class="login-box">
-  <h2>Login</h2>
-  <input id="username" placeholder="Username">
-  <input id="password" type="password" placeholder="Password">
-  <button onclick="login()">Login</button>
-  <p id="loginError"></p>
-</div>
+  <div class="login-box">
+    <h2>Smart City Bidding</h2>
 
-<script src="script.js"></script>
+    <input id="username" placeholder="Username">
+    <input id="password" type="password" placeholder="Password (admin only)">
+
+    <button onclick="login()">Login</button>
+    <p id="loginError"></p>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
