--- a/user.html
+++ b/user.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>User Panel</title>
+  <title>User Bidding Panel</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <h1>User Bidding Panel</h1>
+
 <div id="userPanel" class="grid"></div>
 
 <script src="script.js"></script>
