--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Smart City Bidding - Login</title>
+  <title>Smart City Bidding</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="center">
 
   <div class="login-box">
-    <h2>Smart City Bidding</h2>
-
+    <h2>Login</h2>
     <input id="username" placeholder="Username">
-    <input id="password" type="password" placeholder="Password (admin only)">
-
     <button onclick="login()">Login</button>
-    <p id="loginError"></p>
   </div>
 
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
