--- a/admin.html
+++ b/admin.html
@@ -6,10 +6,11 @@
 </head>
 <body>
 
-<h1>Admin Panel</h1>
+<h1>Admin Dashboard</h1>
+
 <p><b>Total Users:</b> <span id="userCount">0</span></p>
 
-<div id="adminData" class="grid"></div>
+<div id="adminPanel"></div>
 
 <script src="script.js"></script>
 </body>
