--- a/admin.html
+++ b/admin.html
@@ -6,11 +6,10 @@
 </head>
 <body>
 
-<h1>Admin Dashboard</h1>
+<h2 class="heading">Admin Dashboard</h2>
+<p class="stats">Total Users: <span id="userCount">0</span></p>
 
-<p><b>Total Users:</b> <span id="userCount">0</span></p>
-
-<div id="adminPanel"></div>
+<div id="adminData" class="grid"></div>
 
 <script src="script.js"></script>
 </body>
