--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Smart City Bidding</title>
+  <title>Login</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="center">
 
   <div class="login-box">
-    <h2>Login</h2>
+    <h2>Smart City Bidding</h2>
     <input id="username" placeholder="Username">
+    <input id="password" type="password" placeholder="Password">
     <button onclick="login()">Login</button>
+    <p id="loginError"></p>
   </div>
 
 <script src="script.js"></script>
