--- a/admin.html
+++ b/admin.html
@@ -6,10 +6,22 @@
 </head>
 <body>
 
-<h2 class="heading">Admin Dashboard</h2>
-<p class="stats">Total Users: <span id="userCount">0</span></p>
+<h1 class="title">Admin Dashboard</h1>
 
-<div id="adminData" class="grid"></div>
+<div class="card">
+  <h3>Total Users</h3>
+  <p id="users">0</p>
+</div>
+
+<div class="card">
+  <h3>All Bids</h3>
+  <pre id="bids"></pre>
+</div>
+
+<div class="card">
+  <h3>Winners</h3>
+  <pre id="winners"></pre>
+</div>
 
 <script src="script.js"></script>
 </body>
