--- a/index.html
+++ b/index.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Login</title>
+  <title>Smart City Bidding Login</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="center">
+<body>
 
-  <div class="login-box">
-    <h2>Smart City Bidding</h2>
-    <input id="username" placeholder="Username">
-    <input id="password" type="password" placeholder="Password">
-    <button onclick="login()">Login</button>
-    <p id="loginError"></p>
-  </div>
+<h1 class="title">SMART CITY BIDDING SYSTEM</h1>
+
+<div class="login-box">
+
+  <h2>Admin Login</h2>
+  <input id="adminUser" placeholder="Admin Username">
+  <input id="adminPass" type="password" placeholder="Admin Password">
+  <button onclick="adminLogin()">Login as Admin</button>
+
+  <hr>
+
+  <h2>User Login (OTP)</h2>
+  <input id="email" placeholder="User Email">
+  <button onclick="sendOTP()">Send OTP</button>
+  <p id="msg"></p>
+
+  <input id="otp" placeholder="Enter OTP">
+  <button onclick="verifyOTP()">Verify OTP</button>
+
+</div>
 
 <script src="script.js"></script>
 </body>
