--- a/admin.html
+++ b/admin.html
@@ -6,21 +6,23 @@
 </head>
 <body>
 
-<h1 class="title">Admin Dashboard</h1>
+<h1 class="title">ADMIN PANEL</h1>
 
-<div class="card">
-  <h3>Total Users</h3>
-  <p id="users">0</p>
-</div>
+<div class="login-box" style="width:90%">
 
-<div class="card">
-  <h3>All Bids</h3>
+  <h2>Total Users</h2>
+  <p id="users"></p>
+
+  <hr>
+
+  <h2>All Bids</h2>
   <pre id="bids"></pre>
-</div>
 
-<div class="card">
-  <h3>Winners</h3>
+  <hr>
+
+  <h2>Winners</h2>
   <pre id="winners"></pre>
+
 </div>
 
 <script src="script.js"></script>
