--- a/user.html
+++ b/user.html
@@ -6,49 +6,45 @@
 </head>
 <body>
 
-<h1 class="title">User Bidding Panel</h1>
+<h1 class="title">USER BIDDING PANEL</h1>
 
 <div class="grid">
 
-<!-- Highest Bid -->
 <div class="card">
-  <h3>Advertisement Rights Auction</h3>
-  <p>HIGHEST BID</p>
-  <p id="t1"></p>
-  <input id="u1" placeholder="Your Name">
-  <input id="p1" type="number" placeholder="Price">
-  <button onclick="bid('highest','u1','p1')">Place Bid</button>
+<h3>Advertisement Rights Auction</h3>
+<p>Highest Bid</p>
+<p id="t1"></p>
+<input id="u1" placeholder="Your Name">
+<input id="p1" type="number" placeholder="Price">
+<button onclick="bid('highest','u1','p1')">Place Bid</button>
 </div>
 
-<!-- Lowest Bid -->
 <div class="card">
-  <h3>Road Construction Tender</h3>
-  <p>LOWEST BID</p>
-  <p id="t2"></p>
-  <input id="u2" placeholder="Your Name">
-  <input id="p2" type="number" placeholder="Price">
-  <button onclick="bid('lowest','u2','p2')">Place Bid</button>
+<h3>Road Construction Tender</h3>
+<p>Lowest Bid</p>
+<p id="t2"></p>
+<input id="u2" placeholder="Your Name">
+<input id="p2" type="number" placeholder="Price">
+<button onclick="bid('lowest','u2','p2')">Place Bid</button>
 </div>
 
-<!-- Second Secret -->
 <div class="card">
-  <h3>Spectrum Allocation</h3>
-  <p>SECOND SECRET BID</p>
-  <p id="t3"></p>
-  <input id="u3" placeholder="Your Name">
-  <input id="p3" type="number" placeholder="Secret Price">
-  <button onclick="bid('second','u3','p3')">Place Bid</button>
+<h3>Spectrum Allocation</h3>
+<p>Second Secret Bid</p>
+<p id="t3"></p>
+<input id="u3" placeholder="Your Name">
+<input id="p3" type="number" placeholder="Secret Price">
+<button onclick="bid('second','u3','p3')">Place Bid</button>
 </div>
 
-<!-- Multi Variable -->
 <div class="card">
-  <h3>EV Charging Contract</h3>
-  <p>MULTI VARIABLE BID</p>
-  <p id="t4"></p>
-  <input id="u4" placeholder="Your Name">
-  <input id="p4" type="number" placeholder="Price">
-  <input id="pt4" type="number" placeholder="Technical Points">
-  <button onclick="bidMulti()">Place Bid</button>
+<h3>EV Charging Contract</h3>
+<p>Multi Variable</p>
+<p id="t4"></p>
+<input id="u4" placeholder="Your Name">
+<input id="p4" type="number" placeholder="Price">
+<input id="pt4" type="number" placeholder="Points">
+<button onclick="bidMulti()">Place Bid</button>
 </div>
 
 </div>
