--- a/admin.html
+++ b/admin.html
@@ -6,24 +6,16 @@
 </head>
 <body>
 
-<h1 class="title">ADMIN PANEL</h1>
+<h1>Admin Dashboard</h1>
 
-<div class="login-box" style="width:90%">
+<h2>Total Users</h2>
+<p id="totalUsers">0</p>
 
-  <h2>Total Users</h2>
-  <p id="users"></p>
+<h2>All Bids</h2>
+<pre id="allBids"></pre>
 
-  <hr>
-
-  <h2>All Bids</h2>
-  <pre id="bids"></pre>
-
-  <hr>
-
-  <h2>Winners</h2>
-  <pre id="winners"></pre>
-
-</div>
+<h2>Winners</h2>
+<pre id="winners"></pre>
 
 <script src="script.js"></script>
 </body>
