--- a/user.html
+++ b/user.html
@@ -1,54 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>User Panel</title>
+  <title>User Dashboard</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="container">
+    <h1>User Panel</h1>
 
-<h1 class="title">USER BIDDING PANEL</h1>
+    <div class="card-grid">
 
-<div class="grid">
+      <div class="card">
+        <h3>Highest Bid</h3>
+        <input id="hName" placeholder="Name">
+        <input id="hPrice" placeholder="Bid Amount">
+        <button onclick="placeBid('highest')">Place Bid</button>
+      </div>
 
-<div class="card">
-<h3>Advertisement Rights Auction</h3>
-<p>Highest Bid</p>
-<p id="t1"></p>
-<input id="u1" placeholder="Your Name">
-<input id="p1" type="number" placeholder="Price">
-<button onclick="bid('highest','u1','p1')">Place Bid</button>
-</div>
+      <div class="card">
+        <h3>Lowest Bid</h3>
+        <input id="lName" placeholder="Name">
+        <input id="lPrice" placeholder="Bid Amount">
+        <button onclick="placeBid('lowest')">Place Bid</button>
+      </div>
 
-<div class="card">
-<h3>Road Construction Tender</h3>
-<p>Lowest Bid</p>
-<p id="t2"></p>
-<input id="u2" placeholder="Your Name">
-<input id="p2" type="number" placeholder="Price">
-<button onclick="bid('lowest','u2','p2')">Place Bid</button>
-</div>
+      <div class="card">
+        <h3>Sealed Bid</h3>
+        <input id="sName" placeholder="Name">
+        <input id="sPrice" placeholder="Bid Amount">
+        <button onclick="placeBid('sealed')">Place Bid</button>
+      </div>
 
-<div class="card">
-<h3>Spectrum Allocation</h3>
-<p>Second Secret Bid</p>
-<p id="t3"></p>
-<input id="u3" placeholder="Your Name">
-<input id="p3" type="number" placeholder="Secret Price">
-<button onclick="bid('second','u3','p3')">Place Bid</button>
-</div>
+      <div class="card">
+        <h3>Multivariable Bidding</h3>
+        <input id="mName" placeholder="Name">
+        <input id="mPrice" placeholder="Price">
+        <input id="mPoints" placeholder="Points">
+        <button onclick="placeMulti()">Place Bid</button>
+      </div>
 
-<div class="card">
-<h3>EV Charging Contract</h3>
-<p>Multi Variable</p>
-<p id="t4"></p>
-<input id="u4" placeholder="Your Name">
-<input id="p4" type="number" placeholder="Price">
-<input id="pt4" type="number" placeholder="Points">
-<button onclick="bidMulti()">Place Bid</button>
-</div>
+    </div>
+  </div>
 
-</div>
-
-<script src="script.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
