--- a/admin.html
+++ b/admin.html
@@ -1,25 +1,60 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Admin Panel</title>
+  <title>User Dashboard</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Admin Panel</h1>
 
-    <div class="stat">
-      <h3>Total Users</h3>
-      <p id="users"></p>
+<div class="dashboard">
+  <h2>User Dashboard</h2>
+
+  <div class="grid">
+
+    <!-- Highest Bid -->
+    <div class="card">
+      <h3>Highest Bid</h3>
+      <input id="h_name" placeholder="Name">
+      <input id="h_price" type="number" placeholder="Price">
+      <button onclick="placeBid('highest','h_name','h_price')">Bid</button>
+      <p id="t_high"></p>
+      <small>Worst Case: O(n log n)</small>
     </div>
 
-    <div class="stat">
-      <h3>Winners</h3>
-      <pre id="winners"></pre>
+    <!-- Lowest Bid -->
+    <div class="card">
+      <h3>Lowest Bid</h3>
+      <input id="l_name" placeholder="Name">
+      <input id="l_price" type="number" placeholder="Price">
+      <button onclick="placeBid('lowest','l_name','l_price')">Bid</button>
+      <p id="t_low"></p>
+      <small>Worst Case: O(n log n)</small>
     </div>
+
+    <!-- Sealed Bid -->
+    <div class="card">
+      <h3>Sealed Bid (2nd Highest)</h3>
+      <input id="s_name" placeholder="Name">
+      <input id="s_price" type="number" placeholder="Price">
+      <button onclick="placeBid('sealed','s_name','s_price')">Bid</button>
+      <p id="t_sealed"></p>
+      <small>Worst Case: O(n log n)</small>
+    </div>
+
+    <!-- Multivariable -->
+    <div class="card">
+      <h3>Multivariable Bid</h3>
+      <input id="m_name" placeholder="Name">
+      <input id="m_price" type="number" placeholder="Price">
+      <input id="m_points" type="number" placeholder="Points">
+      <button onclick="placeMultiBid()">Bid</button>
+      <p id="t_multi"></p>
+      <small>Worst Case: O(n log n)</small>
+    </div>
+
   </div>
+</div>
 
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
-
 </html>
