--- a/user.html
+++ b/user.html
@@ -8,10 +8,10 @@
 
 <div class="dashboard">
   <h2>User Dashboard</h2>
+  <p id="msg"></p>
 
   <div class="grid">
 
-    <!-- Highest Bid -->
     <div class="card">
       <h3>Highest Bid</h3>
       <input id="h_name" placeholder="Name">
@@ -21,7 +21,6 @@
       <small>Worst Case: O(n log n)</small>
     </div>
 
-    <!-- Lowest Bid -->
     <div class="card">
       <h3>Lowest Bid</h3>
       <input id="l_name" placeholder="Name">
@@ -31,7 +30,6 @@
       <small>Worst Case: O(n log n)</small>
     </div>
 
-    <!-- Sealed Bid -->
     <div class="card">
       <h3>Sealed Bid (2nd Highest)</h3>
       <input id="s_name" placeholder="Name">
@@ -41,9 +39,8 @@
       <small>Worst Case: O(n log n)</small>
     </div>
 
-    <!-- Multivariable -->
     <div class="card">
-      <h3>Multivariable Bid</h3>
+      <h3>Multivariable Bidding</h3>
       <input id="m_name" placeholder="Name">
       <input id="m_price" type="number" placeholder="Price">
       <input id="m_points" type="number" placeholder="Points">
