--- a/admin.html
+++ b/admin.html
@@ -10,8 +10,8 @@
   <h2>Admin Dashboard</h2>
 
   <p>Total Users: <span id="users"></span></p>
-  <p>Current Winner: <span id="winner"></span></p>
-  <p>Algorithm Complexity: <span id="complexity"></span></p>
+  <p>Winner: <span id="winner"></span></p>
+  <p>Complexity: <span id="complexity"></span></p>
 </div>
 
 <script src="script.js"></script>
