--- a/admin.html
+++ b/admin.html
@@ -10,8 +10,10 @@
   <h2>Admin Dashboard</h2>
 
   <p>Total Users: <span id="users"></span></p>
-  <p>Winner: <span id="winner"></span></p>
-  <p>Complexity: <span id="complexity"></span></p>
+  <p>Highest Winner: <span id="winner_highest"></span></p>
+  <p>Lowest Winner: <span id="winner_lowest"></span></p>
+  <p>Secret Winner: <span id="winner_secret"></span></p>
+  <p>Multi Winner: <span id="winner_multi"></span></p>
 </div>
 
 <script src="script.js"></script>
